restructuring = C1 and especially asset creation

--- a/_posts/thesis_chapters/2024-8-5-Design.md
+++ b/_posts/thesis_chapters/2024-8-5-Design.md
@@ -168,8 +168,6 @@ in later stages they were reliant on others to implement code changes.
 When the family withdrew, they shared in feedback (see appendix 4.x) that at one point the family looked around and just saw people doing "hardcore coding" and no longer felt that they belonged". In the end stages of the game production process, due to the dynamic of the larger group, they were reliant on others to implement code changes for their imagined game, unable to contribute fully at this point and found themselves isolated. Thus a contributing factor to this families alienation were tensions engendered by the large group size and compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. This feedback contributed to choices outlined in other sections of this chapter. (WHICH ONES)
 
 
-
-
 <!--
 When the family withdrew, in my journal notes I reflected that the they shared of alienation from the group process occurred in a session where, due to a sense of urgency to complete games, I had omitted drama-based warm up activities. Instead as participant entered I began to support to help some participants debug some pressing code errors. -->
 
@@ -189,6 +187,45 @@ When the family withdrew, in my journal notes I reflected that the they shared o
 
 <!-- NOTE - PERHAPS EXPLORE COMPLEXITIY OF IDES AS A BARRIER IN RESEARCH - SEE BLUE JAY AND GREEN FOOT TRAINING IDEs -->
 <!-- In the activities of study, a high degree of authenticity made possible, in a material sense, by the digital nature of the learning resources. Beyond a general purpose computer, no prohibitive equipment is needed. -->
+
+## Detail of Tool Evloutio based on resolving Conflicts
+
+Intro to different sections
+
+
+
+### Use of a Code Playground
+
+Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. Learning computer coding presents challenges in part due to unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004]. The use of code playgrounds by novices can mitigate against some of the complexities of code environments. Tricky elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
+FIND OR REFERENCE SUPPORT
+
+There was a shift from Thimble to Glitch in the shift from p1 to p2 provoked by Mozilla choice to discontinue which happened concurrently to and of funding of Webmaker programme. The shift brought some new functionality which was incorporated into the learning design. In this section I link code playground design features that I have used with any existing research on the value of Code Playgrounds. I draw on these affordences in later discussion (linking with constructionist theory)
+
+DROPPED THE REMIXING / SHOWCASE - COMMENT / SUMMARISE?
+
+
+Turning to reducing code syntax errors, it is of value to compare approaches briefly.
+
+While some  software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use [@bau_learnable_2017; @resnick_scratch:_2009]. This process reduced possibilities for syntax errors (see glossary) and often provides a limited set of blocks to reduce complexity. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playground which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
+
+In glitch such code syntax errors are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. In analysis of pair interactions, I frequently [how much from video data]  observed the non-coding peer notice and point out the red dot, thus preventing further errors.
+
+ADD IN HOW FREQUENTLY THE PARTICIPANTS DID USE THIS.
+
+DESCRIPTION OF MY INTERVENTION. At times when addressing code snags experienced by participants I would scan the code looking for the red dots and drawing attention to them.
+
+If this was not helpful I would also use the console of the in-built developer tools of the browser [@collins_crossfire_2011-1].
+
+<!--
+MOVE TO LITERATURE REVIEW IF NEEDED
+
+While block coding offers significant advantages (GL)in preventing syntax errors, in a comparison to text coding approaches, Bau and colleagues summarise the inherent disadvantages [@bau_learnable_2017]. These include: block coding can take of a lot of the users screen; making small changes to code can be tricker in blocks than text; block coding can complicate remote collaboration and version control; searching for code structures is simpler using text code. While these disadvantages are more applicable to more advanced users, they remain relevant to my general goal of working with an environment aligned to professional practices. -->
+
+
+<!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
+
+<!-- In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended. -->
+<!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
 
 
 
@@ -240,9 +277,6 @@ Game states and functions to create the game loop (see glossary) are included na
 
 4.x - Game states and function structure explained in the Glitch Game Makers manual created for for P2 and P3 -->
 
-
-
-
 <!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
 
 <!-- Other parents requested additional supporting resources which explained the coding structures used in accessible but detailed ways. A request which hinted at a more structured, instruction based approach.  -->
@@ -285,54 +319,73 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 To accelerate and support the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. These include changing gravity, altering the player jump height and walking speed.
 
-The starting template began with the game in a broken state thus inviting players to modify the game to fix it. The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code (see Figure above). In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
+The starting template began with the game in a broken state thus inviting players to modify the game to fix it. The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code (see Figure above).
 
-The process here began with me imagining what would be a good feature that players would notice and be spurred to change. Here, the deliberately unsuitable game variable is a key affordance of this half-baked game template. Descriptions of other key affodances follow (NOT GRAPHICS NOW? ADD A MENTION?).
+In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them. This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019; @peppler_computer_2009]
 
-<!-- Descriptions of three design techniques to the template to make quick modification of the game easier follow. -->
+The process here began with me imagining what would be a good feature that players would notice and be spurred to change. Here, the deliberately unsuitable game variable is a key affordance of this half-baked game template.
+
+Descriptions of other under-developed features inviting improvement follow including level design and the use of minimalistic graphical assets.
+
 <!-- I adapted my design with an aim to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.  -->
-<!-- list of changes
-background colour of the game
-game layout of the platforms - hazards and food to collect. -->
 
 #### Level design and prototyping
 
 **The use of a graphical grid structure to edit level design helped balance concerns of accessibility with the use of authentic code language.**
 
-Platform games often conform to certain patterns in terms of the elements involved in a level and their affordances. Common elements include the player that you control to movement of, platforms to be jumped on, enemies to be avoided and rewards to be collected. In the templated used in P1 the process of adding game elements was involved relatively complex process which involved changing parameters of functions to alter to adjust their location. An example of the code needed is included one of my tutorial chapters / appendix 4.x [^7].
+Platform games often conform to certain patterns in terms of the elements involved commonly including: a player that you control to movement of; platforms to be jumped on; hazards to be avoided; and rewards to be collected.
 
-Complexities included: adding function parameters for screen coordinates which made it tricky for participants to intuitively place game elements where they wanted them; each element needs to be added separately; difficulties concerning adding graphical elements of different sizes; in addition for each element added different code elements needed to be added to three different functions in the code.
+In P1 the suggested process of adding game elements was relatively complex which involved changing parameters of functions to alter to adjust their location. An example of the code needed is included one of my tutorial chapters / appendix 4.x [^7]. Complexities included: each element needs to be added separately with code elements required in three different areas of the code template, adding x,y coordinates to place each game elements was; difficulties concerning adding graphical elements of different sizes. These complexities created frustrations in the game making activity P1, in particular as project became bigger cod became unwieldy and confusing to alter, causing a negative impact on the testing and revision process in particular.    
 
-These complexities created barriers and frustrations into the game making activity at a stage which in P1 accumulated into a risk of participants giving up at worst or significantly reduced a participants experience of computational fluidity (as explored in the literature review) at best.   
+Key research on toolsets for novice coders advocates a visual approach to facilitate the coding multi-media projects for novices to address such complexities[@guzdial_programming_2004; @resnick_scratch:_2009]. This is achieved via techiqued which include a drag and drop approach in Scratch or via a concept called tilemaps [@erhard-olsson_procedural_2018] used in GUI oriented game making tools (Unity, Game Maker etc).
 
-The complexities outlined above are addressed in GUI oriented tools like Unity through the use of a concept called tilemaps [@erhard-olsson_procedural_2018]. This design choice allowed alignment with design principles for tools for novice coders, in particular the importance of visual approach to facilitate the programming multi-media projects for novices [@guzdial_programming_2004; @resnick_scratch:_2009]. While such an approach was possible graphical based tools like Scratch, this was in conflict with my motivation to use authentic, text-based tools.
-
-In P2, I revised the starting template to created game elements was based on a visual design in a grid format (see figure 4.x below) which replicated some of the use of use of tilemap technique within the text code format. Changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area.
+While, these tenhiques were not possible in this text-based environment, in P2 I revised the added  the possibility for a visual design approach via the use of a a grid coding format (see figure 4.x below), thus  replicating a tilemap technique within the text code format.
 
 <!-- OPTIONAL ADD AND APPENDIX ON LOAD LEVEL? -->
 
 ![](./Pictures/grid_editor_1.png){width=95%}
 Figure 4.x - Grid based editing of level design with a simple key for hazards, coins, and platforms.
 
-This solution abstracted away complexity of asset placement to prioritise ease of use to help sustain participant engagement. Technically, this approach involves the construction of a data array for each level of 17 blocks which can be one of the following: x (platform); h (hazard); o (coin); or could be left blank (see Figure 4.x above). The end result was that while participants altered a text-based array, the grid structure had a strong visual correlation with the resulting game layout.  This adaptation had a positive impact on engagement with level design in initial stages. Many participants spending significant time and effort undertaking many iterations of changes to the level design.
+**Black boxing the process of placing assets:**
 
-In the vignette in appendix 4.x, Toby designed many levels making the game very challenging but still technically possible. Participants varied in their approach to level design, some drew on their experiences to mirrors platform game conventions, while others enjoyed working against these conventions, a theme which is explored in more detail in chapter five.
-DEVELOP THIS SOMEHOW.
+Technically, this approach involves the construction of a data array for each level of 17 blocks which can be one of the following: x (platform); h (hazard); o (coin); or could be left blank (see Figure 4.x above). The grid structure of text-based array, had a strong visual correlation with the resulting game layout. Changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area.
 
-Thus, here a technical approach helped resolve tension described above. Black boxing the process of adding assets via x,y coordinates and reducing repetitive process.
+This solution abstracted away complexity and repetitive nature of asset placement via multiple asset placements  to prioritise ease of use to help sustain participant engagement.
+
+Thus, here a technical approach helped resolve tension between immediacy of feedback and ?
+
+Via quickly adding design possibilities to change levels design.
+
+This adaptation had a positive impact on engagement with level design in initial stages. Many participants spending significant time and effort undertaking many iterations of changes to the level design ((Is this something that can be given figures to? Perhaps for one session?)).  An illustrative example of the impact of
+is explored via a vignette in appendix 4.x where child participant Toby designs many levels. The goal seems to be to make the game challenging and to add many levels as a way of making his game distinct from others (include BETTER SUMMARY). Participants varied in their approach to level design, some drew on their experiences to mirrors platform game conventions, while others enjoyed working against these conventions, a theme which is explored in more detail in .
+
+<!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
+
+#### Use of game assets
+
+This section conversation: simple block graphics as a half-baked affordences, the use of pixel art and authoring tool, distributed asset creation approaches  
+
+##### Simple block graphics
+
+A further way in which the template aligned with the concept of half-baked game concept as in how the use of minimal starting game assets invited creative addition by participants in the form of graphical asset creation and game story.
+
+In P1 a template based on tutorial used stock graphics of a astronaut collecting stars on platforms resembling earth and grass. In P2 starting graphics consisted of colour blocks. Their size of 32 x 32 corresponded to the default project size of Piskel (the graphical pixel art editor) with an aim to was also design to reduce technical friction.
+
+A pixel art approach to graphics allowed a balance between the potential for positive engagement with game making and the potential drain of time to this one activity, thus helping resolve one of the tensions emerging in P1. Piskel had proved to be intuitive for many younger participants with three main areas: a set of editing tools; a canvas for creation; and a set of tools to export, save and import work (see Figure 4.x).
+
+![](./Pictures/piskel_app_1.png){width=95%}
+Figure 4.x - Interface of Piskelapp tool
+
+One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for participants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels). This is one example of one of the  technical alignments which addressed and helped resolve practical obstacles that participants experienced.
 
 
-#### Simple block graphics
-
-The use of blocks of text invited
-Their size of 32 x 32 was also design to reduce friction in the creative process as this was the default size of Piskel.
-
-One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for participants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels). This is one example of many small technical alignments which addressed and helped resolve practical obstacles that participants experienced.
 
 NOTE - INTEGRADE DISTRIBUTED ASSET CREATION AND NOT BLACK BOXING EXPORTING ETC AS A DIGITAL LITERACY SKILL.
 
 
-<!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
+
+#### Distributed approach to asset creation
+
 
 
 
@@ -340,9 +393,6 @@ NOTE - INTEGRADE DISTRIBUTED ASSET CREATION AND NOT BLACK BOXING EXPORTING ETC A
 As they had been guided to make a game on a broadly environmental theme, participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
 
 ![](./Pictures/whale_1.png){width=50%} -->
-
-<!-- MOVE?
-The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax. -->
 
 <!-- #### Creating a simplified and clear project structure
 
@@ -363,71 +413,6 @@ Despite building familiarity with code, at this stage event simple game changes 
 
 
 
-### Other relevant discussion points related to the area of contradictions regarding tools
-
-#### Tension of a group remixing from one template rather than feeler community inspiration and interaction
-
-To facilitate community inspiration and interaction, rather than engaging with an online community which encourages remixing, collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016], one code base was promoted in order to simplify the process of supporting code errors, and promote peer support, sharing and problem solving due to the use of similar code bases. In journal entries I noted this choice as a tension between, freedom of community inspiration and practicalities of supporting complex coding errors. Sharing of ideas and inspiration did happen both on the playtesting (explored later and more extensively Chapter 7) of each others games and via incidental exposure to the online graphical creations of others via a shared account to Piskel.
-
-#### Design adaptations to facilitate novice use of a code playground
-
-<!-- Self-contained so many things set up by default,
-a default screen size, asset creation tools, online community, comments and friend section.  -->
-
-Code playgrounds, as described in chapter two, are an online environment used to test, share or invite help from online users. My choice to use a text code environment risked maximising barriers to participation by not profiting from design decisions in specialist coding software to help novice coders (previously explored in LR). These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. Learning computer coding presents challenges in part due to unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004]. To shed light on this conflict and to situate later findings, this section surfaces observations from my journal notes and video data on how participants responded the tools introduced and my design adaptations.
-
-DROPPED THE REMIXING / SHOWCASE - COMMENT / SUMMARISE?
-
-THE IDEA BEING HOW CAN THE IDEAS OF CONSTRUCTIONIST TOOL KITS INTO THIS TOOL SET - PERHAPS PICK UP IN OBSERVATIONS SECTION. CHECK THE MOVED SECTION IN CHAPTER 6 NOW.
-
-
-    Task-specific programming (TSP) aims to provide the same easy-to-
-    understand operations for a microworld, but with a language and envi-
-    ronment designed for a particular purpose. The task-specific programming
-    language (TSPL) is purposefully limited in the abstractions and concepts
-    needed for the tasks or explorations in the microworld so that program-
-    ming becomes much easier to learn than a complete programming lan-
-    guage.
-    [@kong_providing_2022]
-
-
-<!-- NOTE - is this true? -->
-<!--
-These elements include steps to reducing syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration. -->
-
-<!-- To address this I explore my own design decisions that and existing features of a code playground align with those key principles. -->
-
-<!-- NOTE - WHERE EXACTLY ARE THEY EXPLORED? -->
-<!-- NOTE - DROP - MAKE MORE DIRECT
-While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
-
-#### Addressing code syntax errors
-
-COMPRESS AND LINK TO ABOVE PARAGRAPH
-
-Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use [@bau_learnable_2017; @resnick_scratch:_2009]. This process reduced possibilities for syntax errors (see glossary) and often provides a limited set of blocks to reduce complexity. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playground which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
-
-In glitch such code syntax errors are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. In analysis of pair interactions, I frequently [how much from video data]  observed the non-coding peer notice and point out the red dot, thus preventing further errors.
-
-ADD IN HOW FREQUENTLY THE PARTICIPANTS DID USE THIS.
-
-DESCRIPTION OF MY INTERVENTION. At times when addressing code snags experienced by participants I would scan the code looking for the red dots and drawing attention to them.
-
-If this was not helpful I would also use the console of the in-built developer tools of the browser [@collins_crossfire_2011-1].
-
-<!--
-MOVE TO LITERATURE REVIEW IF NEEDED
-
-While block coding offers significant advantages (GL)in preventing syntax errors, in a comparison to text coding approaches, Bau and colleagues summarise the inherent disadvantages [@bau_learnable_2017]. These include: block coding can take of a lot of the users screen; making small changes to code can be tricker in blocks than text; block coding can complicate remote collaboration and version control; searching for code structures is simpler using text code. While these disadvantages are more applicable to more advanced users, they remain relevant to my general goal of working with an environment aligned to professional practices. -->
-
-
-<!-- In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments. -->
-
-<!-- In my design the tools set is distinct from tools like Scratch, Logo in that while those tools were designed to be self-contained, the use of a JS library in a web coding environment is more open-ended. -->
-<!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
-<!-- #### Creation and migration of graphical and audio assets. -->
-
-
 #### Distributed vs. self-contained approaches to asset creation - INTEGRATE IN GRAPHICS SECTION ABOVE
 
 A key element of game creation is the creation and management of graphical and audio assets. Many coding tools for novices provide a library of prebuilt assets and tools within the environment to alter or creation graphical and audio multimedia assets to facilitate and accelerate the creation of games and coding projects. While there are practical limits to the audio and graphical authoring capabilities of tools like Scratch [@payne2019music], such self-contained approached reduce possibility for compounding errors and complexity caused by the compatibility of file formats and migration and management of external asset files.
@@ -439,17 +424,8 @@ THE BENEFITS OF ASSET CREATION AS A WAY TO INCORPORATE FUNDS OF KNOWLEDGE - WHER
 
 <!-- In Scratch there are tabs which host simplified graphical and audio studios. Design decisions prioritise ease of use and the ability to record audio right into the program.  -->
 
-In P1 I observed participant showing a high motivation to incorporate assets. Responding to the enthusiasm of participants in asset creation, I had introduced six additional software tools to participants including tools for pixel art, sound editing, sound creation. A table of the different tools is included as appendix 4.x
+In P1 I observed participant showing a high motivation to incorporate assets. Responding to the enthusiasm of participants in asset creation, I had introduced six additional software tools to participants including tools for pixel art, sound editing, sound creation. A table of the different tools is included as appendix 4.x  
 
-A summative timeline is included as a diagram.
-
-<!--
-- Piskel - a graphical editor used to create pixel art sprite characters;
-- Audacity - a desktop based application to record and edit audio using audio effects and filters like delay and echo;
-- freesound.org - an open repository of audio files which could be downloaded, used directly or altered using Audacity;
-- Sonic Pi - an education music application allowing the creation of music using text coding;
-- Bfxr & jsfxr - web based tools to create sound effects aimed at game production;
-- Scratch - while scratch was not use for game production, I encouraged participants to use its intuative graphical editor to create backgrounds for the game; -->
 
 Similar patterns of use emerged. Participants would identify the need for an asset in their game. They would then use the separate software to create that asset, and the be supported to save assets to their computer's hard drive in a compatible format. They would then need to upload assets to the code playground environment, discover the text link of the asset, and then insert that link into the main JavaScript game file at the relevant line of code. Undertaking the full process involved learning a complex chain of these individual actions. Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Thus, the distributed nature of the toolset used helped build authentic digital literacy skills.
 
@@ -460,19 +436,6 @@ Despite this benefits, I was concerned that in P1 the diversity of asset creatio
 This tension can be described as a play paradox. WHERE IS THIS FIRST INTRODUCED I was looking to avoid too much time spent in asset creation at the expense of other processes which would develop coding concepts and practices. It also increased the possibility of peer learning as less tools were being used.
 
 ALSO NEEDED TO CHANGE DUE TO THE CHANGE IN GROUP WORK DESCRIBED LATER.
-
-##### Use of Piskel
-
-START WITH SHIFT FROM P1 DIVERSITY TO P2 FOCUSED & OVERCOMING PRACTICAL BARRIERS.
-
-<!-- Participants were keen to replace the default coloured block sprites of game elements with their own art of characters and backgrounds. From P2 onwards the one suggested tool to do this was the online Piskel tool [^8]. -->
-
-A pixel art approach to graphics allowed a balance between the potential for positive engagement with game making and the potential drain of time to this one activity, thus helping resolve one of the tensions emerging in P1. Piskel had proved to be intuitive for many younger participants with three main areas: a set of editing tools; a canvas for creation; and a set of tools to export, save and import work (see Figure 4.x).
-
-![](./Pictures/piskel_app_1.png){width=95%}
-Figure 4.x - Interface of Piskelapp tool
-
-<!-- One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for participants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels). This is one example of many small technical alignments which addressed and helped resolve practical obstacles that participants experienced. -->
 
 Participants spent a widely different length of time creating these graphics for a variety of reasons. Some took a long time to master the process of using the editing tool while others created images rapidly but would keep redesigning and recreating their game elements. The process of game art creation opportunities seeding narrative and artistic creativity is explored in more detail in chapter five.
 
@@ -533,6 +496,8 @@ This theme of shielding from complexity is contained in all design choices detai
 
 <!-- For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings.  -->
 
+
+
 ### Observations and discussion on the game template and core tools
 
 <!-- NOTE: FEEDBACK FOCUS from HCI & layer in AT terminology too.  -->
@@ -540,8 +505,6 @@ This theme of shielding from complexity is contained in all design choices detai
 
 <!-- The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.   -->
 <!-- Thus while I highlighted a limited number key code elements and structures to create affordances to facilitate a quick start, the diversity of experience kept some participants extended periods of time. -->
-
-
 
 <!-- Games have been part of human–computer interaction (HCI) research since
 the first CHI conference in 1982. At that gathering, Tom Malone, then at Xerox
@@ -568,6 +531,35 @@ SIGNPOST TO LATER FINDINGS HERE?
 
 The process of modification of the starter template, foregrounding key affordances, together with the restricted tool choice of a code playground and pixel art editor with the authentic, yet scaffolded approach of both tools can be compared to the design decisions made in creating a Microworld environment. DEVELOP THIS WITH LAURILARD AND RESNICKS THEORY.
 
+
+THE IDEA BEING HOW CAN THE IDEAS OF CONSTRUCTIONIST TOOL KITS INTO THIS TOOL SET -
+
+
+    Task-specific programming (TSP) aims to provide the same easy-to-
+    understand operations for a microworld, but with a language and envi-
+    ronment designed for a particular purpose. The task-specific programming
+    language (TSPL) is purposefully limited in the abstractions and concepts
+    needed for the tasks or explorations in the microworld so that program-
+    ming becomes much easier to learn than a complete programming lan-
+    guage.
+    [@kong_providing_2022]
+
+<!-- NOTE - DROP - MAKE MORE DIRECT
+While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
+
+
+
+#### Developing Digital Literacy skills
+
+The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax.
+
+
+
+####  INTEGRAETE ABOVE Tension of a group remixing from one template rather than feeler community inspiration and interaction
+
+To facilitate community inspiration and interaction, rather than engaging with an online community which encourages remixing, collaboration and peer review via comments [ @monroy-hernandez_cooperation_nodate; @cress_supporting_2016], one code base was promoted in order to simplify the process of supporting code errors, and promote peer support, sharing and problem solving due to the use of similar code bases. In journal entries I noted this choice as a tension between, freedom of community inspiration and practicalities of supporting complex coding errors. Sharing of ideas and inspiration did happen both on the playtesting (explored later and more extensively Chapter 7) of each others games and via incidental exposure to the online graphical creations of others via a shared account to Piskel.
+
+#### Concluding bit
 My choices balanced the value of positive engagement of asset creating, development of digital literacy skills associated with web production, and a focus on promoting code modification.  
 
 With the modifications to the template in place, participants still only minimal support to find use the key affordances in to make impactful game changes. Simple card prompts were introduced to do help accelerate the process to facilitate working with large groups. Supporting participants in adding new game features changes was more time consuming, particularly when participants wanted to make modifications to the game requiring additional code structures. My response was to turn to more extensive documentation. The next section explores the role of supporting resources and documentation and resulting contractions that emerged.
